Trying to fix top padding on mobile

--- a/css/scss/_template.scss
+++ b/css/scss/_template.scss
@@ -28,6 +28,10 @@ body{
   background-color: #F8F8F8 !important;
 }
 
+.la--header{
+  margin-top: 0 !important;
+}
+
 div[role="main"] > div.content > h2 {
   display: none !important;
 }
